exports[`VectorGraphic VectorGraphic component 1`] = `
<svg
  height={20}
  version="1.1"
  viewBox="0 0 20 20"
  width={20}
  xmlns="http://www.w3.org/2000/svg">
  <circle
    cx="50"
    cy="50"
    fill="red"
    r="40"
    stroke="black"
    strokeWidth="3" />
</svg>
`;

exports[`VectorGraphic VectorGraphic w/ height 1`] = `
<svg
  height={10}
  version="1.1"
  viewBox="0 0 20 10"
  width={20}
  xmlns="http://www.w3.org/2000/svg">
  <circle
    cx="50"
    cy="50"
    fill="red"
    r="40"
    stroke="black"
    strokeWidth="3" />
</svg>
`;

exports[`VectorGraphic VectorGraphic w/ viewHeight 1`] = `
<svg
  height={20}
  version="1.1"
  viewBox="0 0 20 10"
  width={20}
  xmlns="http://www.w3.org/2000/svg">
  <circle
    cx="50"
    cy="50"
    fill="red"
    r="40"
    stroke="black"
    strokeWidth="3" />
</svg>
`;

exports[`VectorGraphic VectorGraphic w/ viewWidth 1`] = `
<svg
  height={20}
  version="1.1"
  viewBox="0 0 10 20"
  width={20}
  xmlns="http://www.w3.org/2000/svg">
  <circle
    cx="50"
    cy="50"
    fill="red"
    r="40"
    stroke="black"
    strokeWidth="3" />
</svg>
`;

exports[`VectorGraphic VectorGraphic w/ width 1`] = `
<svg
  height={20}
  version="1.1"
  viewBox="0 0 10 20"
  width={10}
  xmlns="http://www.w3.org/2000/svg">
  <circle
    cx="50"
    cy="50"
    fill="red"
    r="40"
    stroke="black"
    strokeWidth="3" />
</svg>
`;
